# SpeeKey

./: CHANGELOG.md  DESIGN.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  README.md  agent.md  main.py  pipecat-jaeger-tracing.md  pyproject.toml  requirements.txt  test_pipeline_init.py
src/: app.py  pipeline.py
src/ui/web/: index.html
tests/: test_pipeline.py
