[project]
name = "speekey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "fastapi>=0.135.3",
    "pipecat-ai[deepgram,elevenlabs,openai]>=1.0.0",
    "python-dotenv>=1.2.2",
    "transformers>=5.5.4",
    "uvicorn>=0.44.0",
    "websockets>=13.1,<16.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "pytest>=9.0.3",
]
